--- a/SeroChat_BE/appsettings.json
+++ b/SeroChat_BE/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server =(local); database = SeroChat; uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False"
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyForJWT_MustBeAtLeast32Characters!",
+    "Issuer": "SeroChat",
+    "Audience": "SeroChat",
+    "ExpiryMinutes": "1440"
+  },
+  "GeminiSettings": {
+    "ApiKey": "AIzaSyBuk5gLTJ4HQtkaY5ytpjmnA41TPaCaqog",
+    "Model": "gemini-2.5-flash"
+  }
 }
