--- a/SeroChat_FE/app.json
+++ b/SeroChat_FE/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "platforms": ["ios", "android"],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -21,9 +22,6 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.serochat.app"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
