--- a/SeroChat_FE/tsconfig.json
+++ b/SeroChat_FE/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "module": "esnext",
     "jsx": "react-native",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -16,7 +16,6 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "app.d.ts"
   ]
 }
