--- a/SeroChat_BE/appsettings.json
+++ b/SeroChat_BE/appsettings.json
@@ -32,6 +32,11 @@
     "WebhookUrl": "https://unprofiteering-imperceptibly-krystle.ngrok-free.dev/api/payos/webhook",
     "BaseUrl": "https://api-merchant.payos.vn"
   },
+  "CloudinarySettings": {
+    "CloudName": "dnyurlaq7",
+    "ApiKey": "348238288776734",
+    "ApiSecret": "tTv0D_zu_nll-ChPlC4Wv0cO6p4"
+  },
   "AppSettings": {
     "BaseUrl": "http://192.168.1.209:5000"
   }
