--- a/SeroChat_FE/package.json
+++ b/SeroChat_FE/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.5",
     "expo": "~54.0.29",
     "expo-av": "^16.0.8",
+    "expo-document-picker": "^14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
